[project]
name = "facebook-public-intel-mcp"
version = "0.1.0"
description = "MCP server for extracting public OSINT signals from Facebook URLs or investigator-provided captures (compliance-first)."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "tldextract>=5.1.0",
]

[project.scripts]
facebook-public-intel-mcp = "facebook_public_intel.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
