[project]
name = "tiktok-mcp"
version = "0.1.0"
description = "MCP server that enumerates TikTok posts via yt-dlp (metadata only)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.2.0",
  "yt-dlp>=2024.10.0",
  "pydantic>=2.7.0",
]

[project.scripts]
tiktok-mcp = "tiktok_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiktok_mcp"]
